# gestion-des-subventions-locales

./: .djlintrc  .env.example  .gitignore  .pre-commit-config.yaml  .stylelintignore  .stylelintrc.json  AGENTS.md  LICENSE  Procfile  README.md  conftest.py  docker-compose.yml  justfile  manage.py  notes_fonds_vert.md  package-lock.json  package.json  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  vendorize.txt
.github/: pull_request_template.md
.github/workflows/: backup.yml  deploy-prod.yml  django.yml
adr/: 0_what_is_adr.md  1_modelisation-dotation-projet.md
config/: asgi.py  celery.py  urls.py  wsgi.py
config/settings/: default.py  dev.py
config/utils/: context_processors.py
core/: admin.py  models.py
core/.github/: PULL_REQUEST_TEMPLATE.md
core/templates/: base.html
core/tests/: test_user_model.py
docker/postgresql/: init.sql
gsl/: admin.py  apps.py  asgi.py  celery.py  middlewares.py  settings.py  settings_test.py  urls.py  wsgi.py
gsl/apps/: sentry.py
gsl/utils/: context_processors.py  csp.py  logging_formatters.py
gsl_core/: admin.py  admin_alerts.py  apps.py  auth_backends.py  decorators.py  exceptions.py  matomo.py  matomo_constants.py  middlewares.py  models.py  resources.py  scripts.py  signals.py  table_columns.py  tasks.py  urls.py  view_mixins.py  views.py
gsl_core/migrations/: 0001_initial.py  0002_collegue_proconnect_chorusdt_and_more.py  0003_commune_departement_region_adresse_and_more.py  0004_alter_adresse_commune_alter_adresse_postal_code_and_more.py  0005_alter_departement_options_alter_region_options_and_more.py  0005_perimetre_collegue_perimeter_and_more.py  0006_commune_arrondissement.py  0006_create_territoires_inconnus.py  0007_alter_perimetre_options.py  0007_commune_arrondissement.py  0008_alter_perimetre_options.py  0009_collegue_ds_id.py  0010_remove_collegue_ds_id_collegue_ds_profile.py  0011_alter_collegue_email.py  0012_departement_active.py  0013_alter_collegue_is_staff_alter_collegue_is_superuser.py  0013_collegue_comment.py  0014_alter_adresse_created_at_alter_adresse_updated_at_and_more.py  0014_merge_20260210_1059.py  0015_merge_20260212_1416.py  0016_alter_departement_active.py
gsl_core/templates/: 403.html  404.html  500.html  base.html  no_perimetre.html  projet_base.html
gsl_core/templatetags/: custom_pluralize.py  gsl_filters.py
gsl_core/tests/: conftest.py  factories.py  test_admin.py  test_admin_alerts.py  test_commands.py  test_exceptions.py  test_factories.py  test_middlewares.py  test_model_adresse.py  test_models.py  test_otp.py  test_tasks.py  test_template_filters.py  test_user_import.py  test_user_model.py
gsl_demarches_simplifiees/: admin.py  apps.py  ds_client.py  exceptions.py  forms.py  locks.py  mixins.py  models.py  resources.py  services.py  signals.py  tasks.py  urls.py  views.py
gsl_demarches_simplifiees/graphql/: dossier_fragments.gql  ds_mutations.gql  ds_queries.gql  get_demarche_dossiers.gql  get_demarche_metadata.gql  get_one_dossier.gql  graphql.config.yml
gsl_demarches_simplifiees/importer/: demarche.py  dossier.py  dossier_converter.py  utils.py
gsl_demarches_simplifiees/migrations/: 0001_initial.py  0002_alter_dossier_projet_adresse.py  0003_alter_dossier_demande_autres_aides_and_more.py  0004_formejuridique_naf_personnemorale_and_more.py  0005_alter_profile_options_alter_dossier_projet_adresse_and_more.py  0006_alter_arrondissement_options_and_more.py  0007_dossier_ds_date_traitement.py  0008_dossier_annotations_assiette_and_more.py  0009_demarche_raw_ds_data.py  0010_alter_dossier_projet_adresse.py  0011_alter_dossier_annotations_assiette_and_more.py  0012_alter_dossier_annotations_dotation_and_more.py  0013_natureporteurprojet_type.py  0014_alter_natureporteurprojet_options.py  0015_alter_critereeligibilitedetr_options_and_more.py  0016_critereeligibilitedetr_demarche_and_more.py  0017_critereeligibilitedetr_detr_category.py  0017_critereeligibilitedetr_detr_category_and_more.py  0018_alter_profile_ds_email.py  0018_critereeligibilitedetr_tri_and_more.py  0018_dossier_ds_instructeurs.py  0019_demarche_active_revision_date_and_more.py  0019_merge_20251023_1630.py  0020_demarche_updated_since.py  0020_dossier_annotations_assiette_detr_and_more.py  0020_dossier_demandeur_arrondissement_and_more.py  0021_merge_20251117_1647.py  0022_alter_dossier_demande_montant.py  0022_alter_dossier_porteur_de_projet_arrondissement_and_more.py  0022_dossier_annotations_champ_libre_2_and_more.py  0023_merge_20251216_1527.py  0024_alter_fieldmappingforcomputer_django_field.py  0024_dossier_annotations_is_acv_and_more.py  (+51 more)
gsl_ds_proxy/: admin.py  apps.py  filters.py  locks.py  models.py  query_guard.py  urls.py  views.py
gsl_historique/: admin.py  apps.py  models.py
gsl_notification/: admin.py  apps.py  exports.py  forms.py  models.py  qr.py  reattach.py  signals.py  tasks.py  urls.py  utils.py  validators.py  views.py
gsl_oidc/: apps.py  backends.py  middleware.py  urls.py  views.py
gsl_pages/: apps.py  urls.py  views.py
gsl_programmation/: admin.py  apps.py  forms.py  models.py  resources.py  services.py  table_columns.py  tasks.py  urls.py  utils.py  views.py
gsl_projet/: admin.py  apps.py  constants.py  forms.py  models.py  services.py  signals.py  table_columns.py  tasks.py  urls.py  views.py
gsl_simulation/: admin.py  apps.py  filters.py  forms.py  models.py  resources.py  table_columns.py  tasks.py  urls.py  utils.py  views.py
gsl_suivi_financier/: admin.py  apps.py  exploration_fonds_vert.py  models.py  tasks.py  urls.py  views.py
scripts/: generate_dump.sh  restore_db.sh
(+712 files in other folders)
