[project]
name = "gsl"
dynamic = ["version"]
authors = [{ name = "Agnès Haasser", email = "agnes.haasser@beta.gouv.fr" }]
readme = "README.md"
license = { file = "LICENSE" }
dependencies = [
    "celery",
    "dj-database-url",
    "django_celery_results",
    "django-celery-beat",
    "django-csp==4.0b5",
    "django-dsfr",
    "django-extensions",
    "django-filter",
    "django-fsm-2",
    "django-htmx",
    "django-import-export",
    "django-json-widget",
    "django-referrer-policy",
    "django",
    "gunicorn",
    "ipython",
    "mozilla-django-oidc",
    "psycopg[binary]",
    "python-dotenv",
    "redis",
    "sentry-sdk",
    "whitenoise",
]

[tool.setuptools]
packages = ["gsl"]

[build-system]
requires = ["setuptools", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
dev = [
    "diff-cover",
    "django-query-counter",
    "djlint",
    "factory_boy",
    "pip-tools",
    "pre-commit",
    "pytest-cov",
    "pytest-django",
    "pytest-ruff",
    "pytest-xdist",
    "pytest",
    "ruff",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "gsl.settings"
addopts = "--ruff --reuse-db"

[tool.ruff.lint]
exclude = ["**/migrations/*.py"]
ignore = ["E501"]
select = ["I", "F", "E", "DJ", "C90"]
