[project]
name = "gsl"
dynamic = ["version"]
authors = [{ name = "Agnès Haasser", email = "agnes.haasser@beta.gouv.fr" }]
readme = "README.md"
license = { file = "LICENSE" }
dependencies = [
    "boto3",
    "bs4",
    "celery",
    "dj-database-url",
    "django-axes",
    "django_celery_results",
    "django-celery-beat",
    "django-csp",
    "django-dsfr",
    "django-extensions",
    "django-filter",
    "django-fsm-2",
    "django-htmx",
    "django-import-export",
    "django-otp",
    "django-referrer-policy",
    "django-storages[s3]",
    "django",
    "django-formtools",
    "gunicorn",
    "img2pdf",
    "ipython",
    "mozilla-django-oidc",
    "pikepdf",
    "psycopg[binary]",
    "python-dotenv",
    "redis",
    "requests",
    "segno",
    "sentry-sdk",
    "tablib[ods]",
    "tablib[xls]",
    "tablib[xlsx]",
    "whitenoise",
    "django-weasyprint",
]

[tool.setuptools]
packages = ["gsl"]

[build-system]
requires = ["setuptools", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
dev = [
    "diff-cover",
    "django-debug-toolbar",
    "djlint",
    "factory_boy",
    "freezegun",
    "pip-tools",
    "pre-commit",
    "pyproject.toml",
    "pytest-cov",
    "pytest-django",
    "pytest-ruff",
    "pytest-xdist",
    "pytest",
    "responses",
    "ruff",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "gsl.settings_test"
addopts = "--reuse-db"

[tool.ruff.lint]
exclude = ["**/migrations/*.py"]
ignore = ["E501"]
select = ["I", "F", "E", "DJ", "C90"]

[tool.djlint]
profile = "django"
ignore = "H006,H008,H021,H026,H029"
preserve_blank_lines = true
line_break_after_multiline_tag = true
indent = 4
max_line_length = 120
