[project]
name = "gsl"
dynamic = ["version"]
authors = [{ name = "Agnès Haasser", email = "agnes.haasser@beta.gouv.fr" }]
readme = "README.md"
license = { file = "LICENSE" }
dependencies = [
    "boto3",
    "bs4",
    "celery",
    "dj-database-url",
    "django-axes",
    "django_celery_results",
    "django-celery-beat>=2.9.0",
    "django-dsfr>=3.3.1",
    "django-extensions",
    "django-filter",
    "django-fsm-2>=4.2.0",
    "django-htmx",
    "django-import-export",
    "django-json-widget",
    "django-otp",
    "django-referrer-policy",
    "django-storages[s3]",
    "django>=6.0",
    "django-formtools",
    "gunicorn",
    "img2pdf",
    "num2words",
    "ipython",
    "mozilla-django-oidc",
    "pikepdf",
    "psycopg[binary]",
    "python-dotenv",
    "redis",
    "requests",
    "segno",
    "sentry-sdk",
    "tablib[ods]",
    "tablib[xls]",
    "tablib[xlsx]",
    "whitenoise",
    "django-weasyprint",
    "graphql-core",
]

[tool.setuptools]
packages = ["gsl"]

[build-system]
requires = ["setuptools", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
dev = [
    "diff-cover",
    "django-debug-toolbar",
    "djlint",
    "factory_boy",
    "freezegun",
    "pip-tools",
    "pre-commit",
    "pyproject.toml",
    "pytest-cov",
    "pytest-django",
    "pytest-ruff",
    "pytest-xdist",
    "pytest",
    "responses",
    "ruff",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "gsl.settings_test"
addopts = "--reuse-db --cov --cov-report=xml --cov-report=html --cov-report=term-missing:skip-covered"

[tool.coverage.run]
branch = true
source = [
    "gsl",
    "gsl_core",
    "gsl_demarches_simplifiees",
    "gsl_ds_proxy",
    "gsl_notification",
    "gsl_oidc",
    "gsl_pages",
    "gsl_programmation",
    "gsl_projet",
    "gsl_simulation",
    "ui",
]
omit = [
    "*/migrations/*",
    "*/tests/*",
    "*/test_*.py",
    "manage.py",
    "conftest.py",
    "gsl/settings*.py",
    "gsl/asgi.py",
    "gsl/wsgi.py",
]

[tool.coverage.report]
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]

[tool.ruff.lint]
exclude = ["**/migrations/*.py"]
ignore = ["E501"]
select = ["I", "F", "E", "DJ", "C90"]

[tool.djlint]
profile = "django"
ignore = "H006,H008,H021,H026,H029"
preserve_blank_lines = true
line_break_after_multiline_tag = true
indent = 4
max_line_length = 120
